--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -29,7 +29,7 @@ h1 {
   margin-top: 0px;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1251x) {
   #toc.toc {
       margin-top: 0!important;
       background-color: #f8f8f7;
@@ -110,7 +110,7 @@ h1 {
   color: #00beef;
 }
 
-@media screen and (max-width: 768px) { 
+@media screen and (max-width: 1250px) { 
 #submenuconfig + .sectionbody{ 
 top: 123px; /* to be updated if number of entries of navbar change */ 
 padding-left: 2px;
