--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -29,7 +29,7 @@ h1 {
   margin-top: 0px;
 }
 
-@media screen and (min-width: 768x) {
+@media screen and (min-width: 768px) {
   #toc.toc {
       margin-top: 0!important;
       background-color: #f8f8f7;
