--- a/assets/styles/solar-bootstrap-theme.css
+++ b/assets/styles/solar-bootstrap-theme.css
@@ -81,7 +81,7 @@ fieldset[disabled] .btn-danger {
 .btn-default:focus,
 .btn-default:active,
 .btn-default.active {
-  background-color: #00d2f8;
+  background-color: #00BEE6;
 }
 .btn-default.disabled,
 .btn-default[disabled],
@@ -107,7 +107,7 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
  color: #ffffff;
-  background-color: #00d2f8;
+  background-color: #00BEE6;
 }
 .btn-primary:hover,
 .btn-primary:focus {
@@ -118,7 +118,7 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #00d2f8;
+  background-color: #00BEE6;
   opacity: 0.75;
 }
 .btn-primary.disabled,
@@ -179,7 +179,7 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-info {
   color: #ffffff;
-  background-color: #00d2f8;
+  background-color: #00BEE6;
   background-repeat: repeat-x;
 }
 .btn-info:hover,
@@ -315,7 +315,7 @@ hr {
 }
 
 #loading-bar .bar {
-  background: #00d2f8;
+  background: #00BEE6;
 }
 
 .navbar-default {
@@ -328,7 +328,7 @@ hr {
     background-color: #000;
 }
 .navbar a.link, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
-    color: #00d2f8;
+    color: #00BEE6;
     font-size: 1.3em;
     font-weight: bold;
 }
@@ -564,28 +564,49 @@ hr {
 }
 
 .navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus,
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  color: #FFF;
-  background-color: #666666;
-}
-
-.navbar-default .navbar-nav > .active > a:hover{
-  color: #00d2f8;
-  background-color: #666666;
-}
-
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #00d2f8;
+  color: #fff;
   background-color: transparent;
 }
 
-.navbar .nav > li > a, .navbar .nav > li > a:first-letter,
+.navbar .nav > li > a,
 .navbar .nav > li.current-menu-item > a,
 .navbar .nav > li.current-menu-ancestor > a {
-   font-size: 1.1em;
-   font-weight: bold;
+   font-size: 13px;
+   font-weight: normal;
+   font-style: italic;
+   color: #cccccc;
+}
+
+.navbar-form {
+  padding: 0;
+}
+.navbar-form input {
+  border-radius: 0;
+  height: 30px;
+  background-color: #555555;
+  border: none;
+  color: white;
+}
+.navbar-form .form-control:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.navbar-form button {
+  height: 30px;
+  background-color: #555555;
+  text-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.navbar-form .btn-default:hover, .navbar-form .btn-default:focus, .navbar-form .btn-default:active, .navbar-form .btn-default.active {
+  background-color: #CCCCCC;
 }
 
 .dropup .caret,
